2007-08-03 15:26  Douglas Bates <bates@stat.wisc.edu>

	* [r4702] R/lmer.R: simulate method for Poisson glmms (William Valdar)
	* [r4703] src/lme4_utils.h: include R.h before other R header files
	  (Brian Ripley)
	
2007-08-02 15:35  Douglas Bates <bates@stat.wisc.edu>

	* [r4695] src/glmer.c, src/lme4_utils.c, src/lmer.c, src/lmer2.c: Use
	  new Matrix API, fix lmer2_postVar
	* [r4696] DESCRIPTION: Version:, Date: Maintenance release 0.99875-7
	
2007-08-02 10:51  Martin Maechler <maechler@stat.math.ethz.ch>

	* [r4694] R/lmer.R: use 'is()', not 'inherits()' for S4 classes !

2007-07-10 12:05  Douglas Bates <bates@stat.wisc.edu>

	* [r4586] R/lmer.R: reconcile inconsistency of code and docs (Kurt Hornik)
	* [r4587] DESCRIPTION: Version:, Date: Maintenance release 0.99875-6
	
2007-07-09 21:34  Douglas Bates <bates@stat.wisc.edu>

	* [r4575,4581] src/glmer.c, src/lme4_utils.c, src/lme4_utils.h,
	  src/lmer.c, src/lmer2.c: Use macros N_AS_CHM_DN and Alloca more widely.
	* [r4582] DESCRIPTION: Release 0.99875-5

2007-07-09 11:27  Douglas Bates <bates@stat.wisc.edu>

	* [r4574] ChangeLog, DESCRIPTION, inst/doc/Theory.Rnw, src/glmer.c,
	  src/lme4_utils.c, src/lmer.c, src/lmer2.c: Version of nongappy lmer
	  compatible with changed API for the Matrix package

2007-07-04 12:09  Douglas Bates <bates@stat.wisc.edu>

	* [r4542] inst/doc/Theory.Rnw, inst/doc/lme4.bib: Consistency of
	  notation for a r.v. and for its value. (Also r4497, r4502, r4505, r4506)

	
2007-07-03 14:39  Douglas Bates <bates@stat.wisc.edu>

	* [r4538] inst/doc/Doxyfile: Improved but still not working to my
	satisfaction. (Also r4494)

2007-06-30 17:52  Douglas Bates <bates@stat.wisc.edu>

	* [r4528] DESCRIPTION, inst/doc/Theory.Rnw, inst/doc/lme4.bib: Prepare
	  for release 0.99875-3, the last release before the Matrix API change.

2007-06-24 12:29  Douglas Bates <bates@stat.wisc.edu>

	* [r4502] R/lmer.R: Typo in simulate method for lmer2 objects (Robert
	  Kushler)