@@ -1,15 +1,15 @@
 Package: lme4
-Version: 0.99875-7
-Date: 2007-08-03
+Version: 0.99875-8
+Date: 2007-09-26
 Title: Linear mixed-effects models using S4 classes
 Author: Douglas Bates <bates@stat.wisc.edu>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
 Description: Fit linear and generalized linear mixed-effects models.
-Depends: methods, R(>= 2.5.1), Matrix(>= 0.999375-1), lattice
+Depends: methods, R(>= 2.5.1), Matrix(>= 0.999375-2), lattice
 LinkingTo: Matrix, stats
 Imports: graphics, stats
 Suggests: mlmRev, coda
 LazyLoad: yes
 LazyData: yes
 License: GPL version 2 or later
-Packaged: Fri Aug  3 10:50:41 2007; bates
+Packaged: Wed Sep 26 12:52:35 2007; bates
