@@ -27,6 +27,16 @@ extern
 #define _(String) (String)
 #endif
 
+#ifdef __GNUC__
+# undef alloca
+# define alloca(x) __builtin_alloca((x))
+#else
+/* this is necessary (and sufficient) for Solaris 10: */
+# ifdef __sun
+#  include <alloca.h>
+# endif
+#endif
+
 extern cholmod_common c;
 
 #define Alloca(n, t)   (t *) alloca( (size_t) ( (n) * sizeof(t) ) )
