@@ -1,3 +1,10 @@
+2007-09-26 17:26  Douglas Bates <bates@stat.wisc.edu>
+
+	* [r4785] R/lmer.R: Reinstitute the names of variance components from
+	  formatVC
+	* [r4786] DESCRIPTION: Version 0.99875-8
+	* [r4788] src/lme4_utils.h: More careful definition of alloca
+	
 2007-08-03 15:26  Douglas Bates <bates@stat.wisc.edu>
 
 	* [r4702] R/lmer.R: simulate method for Poisson glmms (William Valdar)
